--- a/reports/biblio.bib
+++ b/reports/biblio.bib
@@ -7,6 +7,63 @@ volume = {529},
 number = {7587},
 pages = {484--489}
 }
+
+@article{SchaulQAS15,
+  author    = {Tom Schaul and
+               John Quan and
+               Ioannis Antonoglou and
+               David Silver},
+  title     = {Prioritized Experience Replay},
+  journal   = {CoRR},
+  volume    = {abs/1511.05952},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1511.05952},
+  archivePrefix = {arXiv},
+  eprint    = {1511.05952},
+  timestamp = {Mon, 13 Aug 2018 16:46:28 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/SchaulQAS15},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{HasseltGS15,
+  author    = {Hado van Hasselt and
+               Arthur Guez and
+               David Silver},
+  title     = {Deep Reinforcement Learning with Double Q-learning},
+  journal   = {CoRR},
+  volume    = {abs/1509.06461},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1509.06461},
+  archivePrefix = {arXiv},
+  eprint    = {1509.06461},
+  timestamp = {Mon, 13 Aug 2018 16:47:32 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/HasseltGS15},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{mnih2015humanlevel,
+  added-at = {2015-08-26T14:46:40.000+0200},
+  author = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A. and Veness, Joel and Bellemare, Marc G. and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K. and Ostrovski, Georg and Petersen, Stig and Beattie, Charles and Sadik, Amir and Antonoglou, Ioannis and King, Helen and Kumaran, Dharshan and Wierstra, Daan and Legg, Shane and Hassabis, Demis},
+  biburl = {https://www.bibsonomy.org/bibtex/2fb15f4471c81dc2b9edf2304cb2f7083/hotho},
+  description = {Human-level control through deep reinforcement learning - nature14236.pdf},
+  interhash = {eac59980357d99db87b341b61ef6645f},
+  intrahash = {fb15f4471c81dc2b9edf2304cb2f7083},
+  issn = {00280836},
+  journal = {Nature},
+  keywords = {deep learning toread},
+  month = feb,
+  number = 7540,
+  pages = {529--533},
+  publisher = {Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+  timestamp = {2015-08-26T14:46:40.000+0200},
+  title = {Human-level control through deep reinforcement learning},
+  url = {http://dx.doi.org/10.1038/nature14236},
+  volume = 518,
+  year = 2015
+}
+
+
+
 @book{russelartificial,
   title={Artificial Intelligence: A Modern Approach, 2003},
   author={Russel, Stuart and Norvig, Peter},
