--- a/reports/biblio.bib
+++ b/reports/biblio.bib
@@ -41,6 +41,13 @@ pages = {484--489}
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@MastersThesis{spooner2016,
+  title={Reinforcement Learning for High-Frequency Market Making in Limit Order Book Markets},
+  author={Spooner, Thomas Lawrence},
+  year={2016},
+  school={the University of Liverpool}
+}
+
 @article{mnih2015humanlevel,
   added-at = {2015-08-26T14:46:40.000+0200},
   author = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A. and Veness, Joel and Bellemare, Marc G. and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K. and Ostrovski, Georg and Petersen, Stig and Beattie, Charles and Sadik, Amir and Antonoglou, Ioannis and King, Helen and Kumaran, Dharshan and Wierstra, Daan and Legg, Shane and Hassabis, Demis},
